# redis-streams-messaging

./: .gitignore  README.md  fix-redis-history.sh
java/: pom.xml
java/examples/: ProducerDemo.java
java/src/main/java/com/vipulconda/streams/: DlqHandler.java  EnvelopeCodec.java  MessageEnvelope.java  StreamConfig.java  StreamConsumer.java  StreamProducer.java
java/src/test/java/com/vipulconda/streams/: EnvelopeCodecTest.java  StreamIntegrationTest.java
python/: pyproject.toml
python/examples/: consumer_demo.py  producer_demo.py
python/redis_streams_messaging/: __init__.py  config.py  consumer.py  dlq.py  envelope.py  exceptions.py  producer.py
python/tests/: test_producer_consumer.py
