[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redis-streams-messaging"
version = "1.0.0"
description = "Redis Streams producer/consumer wrapper with DLQ support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "fakeredis>=2.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["redis_streams_messaging*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
